--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Brainnest JavaScript Main Assignment</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        
+        <div class="selections">
+            <button class="selection" data-selection="rock">
+                ROCK
+            </button>
+            <button class="selection" data-selection="paper">
+                PAPER
+            </button>
+            <button class="selection" data-selection="scissors">
+                SCISSORS
+            </button>
+        </div>
+        <div class="results">
+            <div>
+                You
+                <span class="result-score" data-your-score>0</span>
+            </div>
+            <div data-final-column>
+                Computer
+                <span class="result-score" data-computer-score="">0</span>
+            </div>
+            <!--<div class="result-selection winner">✊</div>
+            <div class="result-selection">✌</div>-->
+        </div>
+
         <script src="./script.js"></script>
     </body>
 </html>
